--- a/dotfiles/.config/waybar/config
+++ b/dotfiles/.config/waybar/config
@@ -3,18 +3,17 @@
     "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
     "height": 30, // Waybar height (to be removed for auto height)
-    "output": "eDP-1", 
+    "output": "eDP-1",
     "spacing": 4, // Gaps between modules (4px)
-
     //Load Modules
-    "include": ["~/.config/waybar/modules.json"],
-
-
+    "include": [
+        "~/.config/waybar/modules.json"
+    ],
     // Choose the order of the modules
     "modules-left": [
-        "wlr/taskbar",
-        "group/quicklinks",
-        "hyprland/window"
+        "wlr/taskbar"
+        //"group/quicklinks",
+        //"hyprland/window"
     ],
     "modules-center": [
         "hyprland/workspaces"
@@ -37,7 +36,6 @@
         "tray",
         "custom/power"
     ],
-
     //Group Quicklinks
     "group/quicklinks": {
         "orientation": "horizontal",
@@ -46,9 +44,8 @@
             "custom/chrome",
         ]
     },
-
     //Group Hardware
-    "group/hardware":{
+    "group/hardware": {
         "orientation": "horizontal",
         "modules": [
             "cpu",
@@ -57,6 +54,5 @@
             "custom/gpuinfo",
             "temperature"
         ]
-
     },
-}   
+}
