Increase timeout values for screen lock and DPMS in hypridle configuration

--- a/dotfiles/.config/hypr/hypridle.conf
+++ b/dotfiles/.config/hypr/hypridle.conf
@@ -18,17 +18,17 @@ listener {
 }
 
 listener {
-    timeout = 600
+    timeout = 900
     on-timeout = loginctl lock-session            # lock screen when timeout has passed
 }
 
 listener {
-    timeout = 1200
+    timeout = 1500
     on-timeout = hyprctl dispatch dpms off                            # screen off when timeout has passed
     on-resume = hyprctl dispatch dpms on && brightnessctl -r          # screen on when activity is detected after timeout has fired.
 }
 
-listener {
-    timeout = 2400                                # 30min
-    on-timeout = systemctl suspend                # suspend pc
-}
+# listener {
+#     timeout = 2400                                # 30min
+#     on-timeout = systemctl suspend                # suspend pc
+# }
