--- a/dotfiles/.config/hypr/hypridle.conf
+++ b/dotfiles/.config/hypr/hypridle.conf
@@ -18,7 +18,7 @@ listener {
 }
 
 listener {
-    timeout = 900
+    timeout = 360
     on-timeout = loginctl lock-session            # lock screen when timeout has passed
 }
 
@@ -29,6 +29,6 @@ listener {
 }
 
 # listener {
-#     timeout = 2400                                # 30min
-#     on-timeout = systemctl suspend                # suspend pc
+#     timeout = 2400                                
+#     on-timeout = systemctl suspend
 # }
