--- a/dotfiles/.config/hypr/hyprpaper.conf
+++ b/dotfiles/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
 preload = ~/.config/hypr/wallpapers/room.jpeg
-preload = ~/.config/hypr/wallpapers/bye.png
+preload = ~/.config/hypr/wallpapers/bye.jpeg
 wallpaper = eDP-1, ~/.config/hypr/wallpapers/room.jpeg
-wallpaper = HDMI-A-2, ~/.config/hypr/wallpapers/bye.png
+wallpaper = HDMI-A-2, ~/.config/hypr/wallpapers/bye.jpeg
