Add scroll factor setting for touchpad in hyprland configuration

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -218,8 +218,10 @@ input {
 
     touchpad {
         natural_scroll = true
+        scroll_factor = 0.2
     }
 }
+
 
 # See https://wiki.hypr.land/Configuring/Gestures
 gesture = 4, horizontal, workspace
