Enhance window rules for improved application management and floating behavior

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -337,15 +337,21 @@ workspace = 2, monitor:HDMI-A-2
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+# windowrule = suppressevent maximize, class:.*
+windowrulev2 = suppress_event maximize, class:(.*)
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrulev2 = nofocus, class:(^$), title:(^$), xwayland:1, floating:1, fullscreen:0, pinned:0
 
-windowrulev2 = float, size 750 500, move 250 42, immediate, class:org.pulseaudio.pavucontrol, title:Volume Control
+windowrule {
+    name = pulseaudio-volume-control
+    float = true
+    size = 750 500
+    move = 250 42
+    immediate = true
+    animation = popin
+    match:class = org.pulseaudio.pavucontrol
+}
 
-windowrulev2 = float, immediate, title:^(Picture-in-Picture)$
-windowrulev2 = pin, immediate, title:^(Picture-in-Picture)$
-windowrulev2 = move 69.5% 4%, immediate, title:^(Picture-in-Picture)$
-
-
+windowrulev2 = float, pin, move 69.5% 4%, immediate, title:^(Picture-in-Picture)$
