Add window rules and Waybar integration for Network Manager connection editor

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -354,4 +354,14 @@ windowrule {
     match:class = org.pulseaudio.pavucontrol
 }
 
+windowrule {
+    name = Network-Manager-Connection-Editor
+    float = true
+    size = 750 500
+    move = 300 42
+    immediate = true
+    animation = popin
+    match:class = nm-connection-editor
+}
+
 windowrulev2 = float, pin, move 69.5% 4%, immediate, title:^(Picture-in-Picture)$
