Refactor GPU info script to include temperature data and clean up module configurations

--- a/dotfiles/.config/waybar/config
+++ b/dotfiles/.config/waybar/config
@@ -22,12 +22,10 @@
         "mpd",
         "idle_inhibitor",
         "pulseaudio",
-        //"costom/audio",
-        //"custom/media",
         "network",
         "power-profiles-daemon",
         "group/hardware",
-        //"backlight",
+        // "custom/hardware-collapse",
         "keyboard-state",
         "sway/language",
         "battery",
