Add hardware overlay toggle functionality and update Waybar configuration

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -25,6 +25,7 @@ $menu = ~/.config/hypr/scripts/toggle-wofi.sh
 $toggle-waybar = ~/.config/hypr/scripts/toggle-waybar.sh
 $random-wallpaper = ~/.config/hypr/scripts/random-wallpaper.sh
 $power-kill = ~/.config/hypr/scripts/power-kill.sh
+$toggle-hardware-overlay = ~/.config/waybar/scripts/toggle_hardware.sh
 #$menu = wofi --show drun
 
 
@@ -262,6 +263,9 @@ bind = $mainMod, J, togglesplit, # dwindle
 
 #Change Wallpaper
 bind = $secMod, P, exec, $random-wallpaper
+
+# Hardware overlay toggle
+bind = $secMod, R, exec, $toggle-hardware-overlay
 
 #ScreenShot
 bind = , PRINT, exec, hyprshot -m region
