--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -247,6 +247,8 @@ device {
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 $secMod = ALT
+$thirdMod = CTRL
+$forthMod = SHIFT
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 
@@ -320,6 +322,8 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = $forthMod ,XF86MonBrightnessUp, exec, hyprctl hyprsunset temperature +500
+bindel = $forthMod ,XF86MonBrightnessDown, exec, hyprctl hyprsunset temperature -500
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
