--- a/dotfiles/.config/waybar/config
+++ b/dotfiles/.config/waybar/config
@@ -19,7 +19,7 @@
         "hyprland/workspaces"
     ],
     "modules-right": [
-        "mpd",
+        // "mpd",
         "idle_inhibitor",
         "pulseaudio",
         "network",
@@ -28,10 +28,10 @@
         // @collapse_start
         // "custom/hardware-collapse",
         // @collapse_end
-        "keyboard-state",
-        "sway/language",
+        // "keyboard-state",
+        // "sway/language",
         "battery",
-        "battery#bat2",
+        // "battery#bat2",
         "clock",
         "tray",
         "custom/power"
