Refactor window rules for PulseAudio and Network Manager editors; update wallpaper configuration format

--- a/dotfiles/.config/hypr/hyprpaper.conf
+++ b/dotfiles/.config/hypr/hyprpaper.conf
@@ -1,4 +1,12 @@
-preload = ~/.config/hypr/wallpapers/room.jpeg
-preload = ~/.config/hypr/wallpapers/bye.jpeg
-wallpaper = eDP-1, ~/.config/hypr/wallpapers/room.jpeg
-wallpaper = HDMI-A-2, ~/.config/hypr/wallpapers/bye.jpeg
+wallpaper {
+    monitor = eDP-1
+    path = ~/.config/hypr/wallpapers/room.jpeg
+    fit_mode = cover
+}
+
+wallpaper {
+    monitor = HDMI-A-2
+    path = ~/.config/hypr/wallpapers/bye.jpeg
+    fit_mode = cover
+}
+
