--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -345,37 +345,37 @@ workspace = 2, monitor:HDMI-A-2
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-# windowrulev2 = suppress_event maximize, class:(.*)
+# windowrule = suppressevent maximize, class:.*
+windowrulev2 = suppress_event maximize, class:(.*)
 
 # Fix some dragging issues with XWayland
 # windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 windowrulev2 = nofocus, class:(^$), title:(^$), xwayland:1, floating:1, fullscreen:0, pinned:0
 
-windowrulev2 = float, size 710 450, move 570 42, class:^(org\.pulseaudio\.pavucontrol)$, title:^(Volume Control)$
-windowrulev2 = float, size 710 450, move 570 42, class:^(nm-connection-editor)$
+# windowrulev2 = float, size 710 450, move 570 42, class:^(org\.pulseaudio\.pavucontrol)$, title:^(Volume Control)$
+# windowrulev2 = float, size 710 450, move 570 42, class:^(nm-connection-editor)$
 windowrulev2 = float, immediate, title:^(Picture-in-Picture)$ 
 windowrulev2 = pin, immediate, title:^(Picture-in-Picture)$ 
 windowrulev2 = move 69.5% 4%, immediate, title:^(Picture-in-Picture)$
 
-# windowrule {
-#     name = pulseaudio-volume-control
-#     float = true
-#     size = 710 450
-#     move = 570 42
-#     immediate = true
-#     animation = popin
-#     match:class = org.pulseaudio.pavucontrol
-# }
+windowrule {
+    name = pulseaudio-volume-control
+    float = true
+    size = 710 450
+    move = 570 42
+    immediate = true
+    animation = popin
+    match:class = org.pulseaudio.pavucontrol
+}
 
-# windowrule {
-#     name = Network-Manager-Connection-Editor
-#     float = true
-#     size = 710 450
-#     move = 570 42
-#     immediate = true
-#     animation = popin
-#     match:class = nm-connection-editor
-# }
+windowrule {
+    name = Network-Manager-Connection-Editor
+    float = true
+    size = 710 450
+    move = 570 42
+    immediate = true
+    animation = popin
+    match:class = nm-connection-editor
+}
 
 # windowrulev2 = float, pin, move 69.5% 4%, immediate, title:^(Picture-in-Picture)$
