--- a/dotfiles/.config/swaylock/config
+++ b/dotfiles/.config/swaylock/config
@@ -2,7 +2,7 @@ ignore-empty-password
 daemonize
 
 # Background
-image=/home/nyanko/.config/hypr/wallpapers/street.jpeg
+image=/home/nyanko/.config/hypr/wallpapers/clif.png
 #fade-in=0.15
 #effect-blur=5x5
 effect-scale=1
@@ -43,21 +43,21 @@ inside-wrong-color=00000000
 ring-color=96CDFB55
 ring-clear-color=96CDFB55
 ring-ver-color=96CDFB55
-ring-wrong-color=DD1717
+ring-wrong-color=994455
 ring-caps-lock-color=F8BD96
 
 # Line colors
 line-color=96CDFB00
 line-clear-color=96CDFB00
 line-ver-color=96CDFB00
-line-wrong-color=DD171700
+line-wrong-color=99445500
 line-caps-lock-color=F8BD9600
 
 # Text colors
 text-color=96CDFBFF 
 text-clear-color=96CDFBFF
 text-ver-color=96CDFBFF
-text-wrong-color=DD1717FF
+text-wrong-color=994455FF
 text-caps-lock-color=F8BD96FF
 
 # Optional: disable default caps lock text
