Refactor code structure for improved readability and maintainability

--- a/dotfiles/.config/hypr/hyprpaper.conf
+++ b/dotfiles/.config/hypr/hyprpaper.conf
@@ -6,7 +6,7 @@ wallpaper {
 
 wallpaper {
     monitor = HDMI-A-2
-    path = ~/.config/hypr/wallpapers/bye.jpeg
+    path = ~/.config/hypr/wallpapers/sad.jpg
     fit_mode = cover
 }
 
