Refactor window rules in hyprland configuration and update Waybar module to include LibreOffice Writer

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -347,17 +347,18 @@ workspace = 2, monitor:HDMI-A-2
 
 # Ignore maximize requests from apps. You'll probably like this.
 # windowrule = suppressevent maximize, class:.*
-windowrulev2 = suppress_event maximize, class:(.*)
+# windowrulev2 = suppress_event maximize, class:(.*)
 
 # Fix some dragging issues with XWayland
 # windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-windowrulev2 = nofocus, class:(^$), title:(^$), xwayland:1, floating:1, fullscreen:0, pinned:0
+# windowrulev2 = nofocus, class:(^$), title:(^$), xwayland:1, floating:1, fullscreen:0, pinned:0
 
 # windowrulev2 = float, size 710 450, move 570 42, class:^(org\.pulseaudio\.pavucontrol)$, title:^(Volume Control)$
 # windowrulev2 = float, size 710 450, move 570 42, class:^(nm-connection-editor)$
-windowrulev2 = float, immediate, title:^(Picture-in-Picture)$ 
-windowrulev2 = pin, immediate, title:^(Picture-in-Picture)$ 
-windowrulev2 = move 69.5% 4%, immediate, title:^(Picture-in-Picture)$
+# windowrulev2 = float, immediate, title:^(Picture-in-Picture)$ 
+# windowrulev2 = pin, immediate, title:^(Picture-in-Picture)$ 
+
+# windowrulev2 = move 69.5% 4%, immediate, title:^(Picture-in-Picture)$
 
 windowrule {
     name = pulseaudio-volume-control
@@ -379,4 +380,4 @@ windowrule {
     match:class = nm-connection-editor
 }
 
-# windowrulev2 = float, pin, move 69.5% 4%, immediate, title:^(Picture-in-Picture)$
+# windowrule = float, pin, move 69.5% 4%, immediate, match:title ^(Picture-in-Picture)$
