--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -26,6 +26,7 @@ $toggle-waybar = ~/.config/hypr/scripts/toggle-waybar.sh
 $random-wallpaper = ~/.config/hypr/scripts/random-wallpaper.sh
 $power-kill = ~/.config/hypr/scripts/power-kill.sh
 $toggle-hardware-overlay = ~/.config/waybar/scripts/toggle_hardware.sh
+$switch-default-sink = ~/.config/hypr/scripts/switch-default-sink.sh
 #$menu = wofi --show drun
 
 
@@ -320,7 +321,8 @@ bindm = $mainMod, mouse:273, resizewindow
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = SHIFT, F1, exec, $switch-default-sink
+bindel = ,F8 , exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 bindel = $forthMod ,XF86MonBrightnessUp, exec, hyprctl hyprsunset temperature +500
