--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -322,11 +322,11 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = SHIFT, F1, exec, $switch-default-sink
-bindel = ,F8 , exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = ,XF86Launch6, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-bindel = $forthMod ,XF86MonBrightnessUp, exec, hyprctl hyprsunset temperature +500
-bindel = $forthMod ,XF86MonBrightnessDown, exec, hyprctl hyprsunset temperature -500
+bindel = ALT , F5, exec, hyprctl hyprsunset temperature +500
+bindel = ALT , F6, exec, hyprctl hyprsunset temperature -500
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
