--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -27,6 +27,7 @@ $random-wallpaper = ~/.config/hypr/scripts/random-wallpaper.sh
 $power-kill = ~/.config/hypr/scripts/power-kill.sh
 $toggle-hardware-overlay = ~/.config/waybar/scripts/toggle_hardware.sh
 $switch-default-sink = ~/.config/hypr/scripts/switch-default-sink.sh
+$window-volume = ~/.config/hypr/scripts/window-volume.sh
 #$menu = wofi --show drun
 
 
@@ -320,9 +321,12 @@ bindm = $mainMod, mouse:273, resizewindow
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ALT, F3, exec, $window-volume +0.05
+bindel = ALT, F2, exec, $window-volume -0.05
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = SHIFT, F1, exec, $switch-default-sink
 bindel = ,XF86Launch6, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 bindel = ALT , F5, exec, hyprctl hyprsunset temperature +500
