--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -8,8 +8,8 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=eDP-1,preferred,auto-left,auto
-monitor=HDMI-A-2,preferred,auto-right,auto
+monitor=eDP-1, highres,auto-left,auto
+monitor=HDMI-A-2, highres,auto-right,auto
 
 
 ###################
@@ -39,6 +39,7 @@ $window-volume = ~/.config/hypr/scripts/window-volume.sh
   exec-once = hyprctl setcursor ComixCursors-White 45
 # exec-once = nm-applet & 
 
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -60,6 +61,9 @@ env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+
+env = GDK_SCALE, 5
+env = XCURSOR_SIZE,32
 
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland
@@ -89,6 +93,12 @@ env = QT_QPA_PLATFORM,wayland
 #####################
 ### LOOK AND FEEL ###
 #####################
+
+# unscale XWayland
+xwayland {
+  force_zero_scaling = true
+  create_abstract_socket = true
+}
 
 # Refer to https://wiki.hypr.land/Configuring/Variables/
 
